--- a/paginas/styles/newproduct.css
+++ b/paginas/styles/newproduct.css
@@ -62,6 +62,7 @@ input[type="number"]::-webkit-outer-spin-button {
         text-decoration: none;
         width: 50%;
         text-align: center;
+        margin-bottom: 1vi;
     }
 
     a:hover {
