--- a/paginas/styles/paginainicial.css
+++ b/paginas/styles/paginainicial.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
+    background-color: #f8f8f8f0;
 }
 
 header {
@@ -60,7 +60,7 @@ header {
 }
 
 .navbar-links a:hover {
-    padding: 14px 14px;
+    padding: 12px 12px;
     border-radius: 0.6rem;
 }
 /* FIM NAV-BAR */  
@@ -74,7 +74,7 @@ header {
     color: #ffffff; /* Cor do texto para contraste */
     padding: 8% 20px;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 20px 0;
@@ -108,7 +108,6 @@ header {
     font-style: oblique;
 }
 
-
 /*FIM INTRO BANNER*/
 
 /* CORPO DO SITE */
@@ -120,7 +119,7 @@ header {
     justify-content: space-between;
     height: 80vh;
     padding: 20px;
-    background-color: #f8f8f8; /* Cor de fundo suave */
+    background-color: #f8f8f8f0; /* Cor de fundo suave */
     border-radius: 10px; /* Bordas arredondadas */
 }
 
@@ -131,11 +130,11 @@ header {
 }
 
 .top-left h2 {
-    font-size: 10; /* Tamanho da fonte aumentado */
-    color: #4a4a4a; /* Cor mais escura */
-    margin-bottom: 300px;
-    font-family: 'Arial', sans-serif; /* Fonte */
-    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8); /* Sombra do texto */
+    font-size: 10;
+    color: rgb(184, 131, 35);
+    margin-bottom: 400px;
+    font-family: 'Arial', sans-serif;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
 }
 
 .middle-image1 {
@@ -148,6 +147,7 @@ header {
     height: auto;
     border-radius: 80px;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+    margin-left: 10%;
 }
 
 .right-text {
@@ -158,7 +158,7 @@ header {
 }
 
 .right-text p {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     line-height: 1.5;
 }
 /*Container 2*/
@@ -168,7 +168,7 @@ header {
     justify-content: space-between;
     height: 80vh;
     padding: 20px;
-    background-color: #f8f8f8; /* Cor de fundo suave */
+    background-color: #f8f8f8f0; /* Cor de fundo suave */
     border-radius: 10px; /* Bordas arredondadas */
 }
 
@@ -179,11 +179,11 @@ header {
 }
 
 .top-right h2 {
-    font-size: 10; /* Tamanho da fonte aumentado */
-    color: #4a4a4a; /* Cor mais escura */
+    font-size: 1.3rem;
+    color: #4a4a4a;
     margin-bottom: 300px;
-    font-family: 'Arial', sans-serif; /* Fonte */
-    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8); /* Sombra do texto */
+    font-family: 'Arial', sans-serif;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
 }
 
 .middle-image2 {
@@ -196,7 +196,7 @@ header {
     height: auto;
     border-radius: 80px;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-    margin-left: 70px;
+    margin-left: 20%;
 }
 
 .left-text {
@@ -207,7 +207,7 @@ header {
 }
 
 .left-text p {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     line-height: 1.5;
 }
 
@@ -257,7 +257,96 @@ header {
     color: #4a4a4a;   
 }
 
+.container3 {
+    margin-top: 100px;
+}
 
+.tituloMenu {
+    text-align: center;
+    color: rgb(184, 131, 35);
+}
+
+.conteudoMenu {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-right: 7%;
+}
+
+#imagemMenu {
+    max-width: 200px;
+    height: auto;
+    border-radius: 10px;
+}
+
+p {
+    max-width: 500px;
+}
+
+#textoMenu {
+    max-width: 4000px;
+    margin-right: 5%;
+    font-size: 1.3rem;
+}
+
+.SobreNos {
+    font-size: 1.6rem;
+    padding: 0;
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
+    color: rgb(184, 131, 35);
+}
+
+#textoSobreNos {
+    margin-top: 20px;
+    margin-bottom: 50px;
+    font-size: 1.3rem;
+    margin-left: 0;
+    width: 100%;
+    max-width: 800px;
+    padding: 20px;
+    box-sizing: border-box;
+    line-height: 1.6;
+    margin-left: 17%;
+    color: #000000;
+}
+
+
+.cafe-lista {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    list-style-type: none;
+    padding: 0;
+    margin-left: 10px;
+    margin-bottom: 20px;
+    align-items: center;
+}
+  
+.cafe-lista li {
+    padding: 10px;
+}
+  
+.cafe-lista strong {
+    font-size: 1.2em;
+    display: block;
+    margin-bottom: 5px;
+    color: rgb(184, 131, 35);
+}
+  
+.cafe-lista p {
+    margin: 0;
+    font-size: 1.1em;
+}
+
+#gelado {
+    margin-bottom: 40px;
+}
+
+#quente {
+    margin-bottom: 107px;
+}
 
 /*FIM DO CORPO DO SITE*/
 
